# MLC

./: CMakeLists.txt  README.md
.github/workflows/: cmake-build.action.yml
LinearRegression/intrinsic_vector/: main  main.cpp  out  vector_linear_regression.cpp  vector_linear_regression.h
LinearRegression/intrinsic_vector/double/: intrinsic_vector_linear_regression.cpp  intrinsic_vector_linear_regression.h  main  main.ass  out
LinearRegression/intrinsic_vector/integer/: intrinsic_vector_linear_regression.cpp  intrinsic_vector_linear_regression.h  main  main.cpp  out
LinearRegression/scalar/: linear_regression.cpp  linear_regression.h  main.cpp  out
LinearRegression/vector/: main.cpp  out  vector_linear_regression.cpp  vector_linear_regression.h
src/: benchmark  main.cpp  tmp.csv
src/LinearRegression/intrinsic_vector/double/: double_intrinsic_vector_linear_regression.h  intrinsic_vector_linear_regression.cpp  main.cpp
src/LinearRegression/intrinsic_vector/integer/: integer_intrinsic_vector_linear_regression.h  intrinsic_vector_linear_regression.cpp  main.cpp
src/LinearRegression/scalar/: linear_regression.cpp  linear_regression.h  main  main.cpp  out  scalar.ass
src/LinearRegression/vector/: main.cpp  out  vector_linear_regression.cpp  vector_linear_regression.h
src/classification/SVM/: Svm.cpp  Svm.h  benchmark.h  out
src/classification/kmeans/: benchmark.h  kmeans.cpp  kmeans.h  out
src/classification/kmeans/intrinsic/: out  (+2 more)
src/constants/: constants.h
src/dataset/: csv.cpp  csv.h
test/: test.cpp
test/classification/kmeans/: kmeans_test.h
(+8 files in other folders)
